Deliverables/Source/ee.taltech.cs.mbt.tdl.expression.tdl_grammar/src/main/java/ee/taltech/cs/mbt/tdl/expression/tdl_grammar/antlr_parser/TdlExpressionLanguageParser.java
// Generated from TDLExpressionLanguage.g4 by ANTLR 4.5
package ee.taltech.cs.mbt.tdl.expression.tdl_grammar.antlr_parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class TdlExpressionLanguageParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LEFT_BRACKET=1, RIGHT_BRACKET=2, LEFT_PAREN=3, RIGHT_PAREN=4, LOP_UNIVERSAL_QUANTIFIER=5, 
		LOP_EXISTENTIAL_QUANTIFIER=6, LOP_NEGATION=7, LOP_CONJUNCTION=8, LOP_DISJUNCTION=9, 
		LOP_IMPLICATION=10, LOP_EQUIVALENCE=11, LOP_LEADS_TO=12, LOP_REPETITION_COUNT=13, 
		TOP_ABSOLUTE_COMPLEMENT=14, TOP_RELATIVE_COMPLEMENT=15, TOP_LINKED_PAIR=16, 
		REL_LESS_THAN_OR_EQ=17, REL_GREATER_THAN_OR_EQ=18, REL_LESS_THAN=19, REL_GREATER_THAN=20, 
		REL_EQUAL=21, TRAPSET_ID=22, NATURAL_NUMBER=23, NUMERIC_ID=24, WS=25;
	public static final int
		RULE_expression = 0, RULE_quantifiedTrapsetExpression = 1, RULE_trapsetExpression = 2, 
		RULE_boundOverNaturals = 3;
	public static final String[] ruleNames = {
		"expression", "quantifiedTrapsetExpression", "trapsetExpression", "boundOverNaturals"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'['", "']'", "'('", "')'", null, null, "'~'", "'&'", "'|'", null, 
		null, null, "'#'", "'!'", "'\\'", "';'", null, null, "'<'", "'>'", "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_PAREN", "RIGHT_PAREN", "LOP_UNIVERSAL_QUANTIFIER", 
		"LOP_EXISTENTIAL_QUANTIFIER", "LOP_NEGATION", "LOP_CONJUNCTION", "LOP_DISJUNCTION", 
		"LOP_IMPLICATION", "LOP_EQUIVALENCE", "LOP_LEADS_TO", "LOP_REPETITION_COUNT", 
		"TOP_ABSOLUTE_COMPLEMENT", "TOP_RELATIVE_COMPLEMENT", "TOP_LINKED_PAIR", 
		"REL_LESS_THAN_OR_EQ", "REL_GREATER_THAN_OR_EQ", "REL_LESS_THAN", "REL_GREATER_THAN", 
		"REL_EQUAL", "TRAPSET_ID", "NATURAL_NUMBER", "NUMERIC_ID", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "TdlExpressionLanguage.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public TdlExpressionLanguageParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class GroundTermExpressionContext extends ExpressionContext {
		public QuantifiedTrapsetExpressionContext quantifiedTrapsetExpression() {
			return getRuleContext(QuantifiedTrapsetExpressionContext.class,0);
		}
		public GroundTermExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterGroundTermExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitGroundTermExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitGroundTermExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LeadsToExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode LOP_LEADS_TO() { return getToken(TdlExpressionLanguageParser.LOP_LEADS_TO, 0); }
		public LeadsToExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterLeadsToExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitLeadsToExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitLeadsToExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ImplicativeExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode LOP_IMPLICATION() { return getToken(TdlExpressionLanguageParser.LOP_IMPLICATION, 0); }
		public ImplicativeExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterImplicativeExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitImplicativeExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitImplicativeExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class GroupedExpressionContext extends ExpressionContext {
		public TerminalNode LEFT_PAREN() { return getToken(TdlExpressionLanguageParser.LEFT_PAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(TdlExpressionLanguageParser.RIGHT_PAREN, 0); }
		public GroupedExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterGroupedExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitGroupedExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitGroupedExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConjunctiveExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode LOP_CONJUNCTION() { return getToken(TdlExpressionLanguageParser.LOP_CONJUNCTION, 0); }
		public ConjunctiveExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterConjunctiveExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitConjunctiveExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitConjunctiveExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EquivalenceExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode LOP_EQUIVALENCE() { return getToken(TdlExpressionLanguageParser.LOP_EQUIVALENCE, 0); }
		public EquivalenceExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterEquivalenceExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitEquivalenceExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitEquivalenceExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NegatedExpressionContext extends ExpressionContext {
		public TerminalNode LOP_NEGATION() { return getToken(TdlExpressionLanguageParser.LOP_NEGATION, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public NegatedExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterNegatedExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitNegatedExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitNegatedExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ConditionalRepetitionExpressionContext extends ExpressionContext {
		public TerminalNode LOP_REPETITION_COUNT() { return getToken(TdlExpressionLanguageParser.LOP_REPETITION_COUNT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode LEFT_BRACKET() { return getToken(TdlExpressionLanguageParser.LEFT_BRACKET, 0); }
		public BoundOverNaturalsContext boundOverNaturals() {
			return getRuleContext(BoundOverNaturalsContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(TdlExpressionLanguageParser.RIGHT_BRACKET, 0); }
		public ConditionalRepetitionExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterConditionalRepetitionExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitConditionalRepetitionExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitConditionalRepetitionExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TimeBoundedLeadsToExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode LOP_LEADS_TO() { return getToken(TdlExpressionLanguageParser.LOP_LEADS_TO, 0); }
		public TerminalNode LEFT_BRACKET() { return getToken(TdlExpressionLanguageParser.LEFT_BRACKET, 0); }
		public BoundOverNaturalsContext boundOverNaturals() {
			return getRuleContext(BoundOverNaturalsContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(TdlExpressionLanguageParser.RIGHT_BRACKET, 0); }
		public TimeBoundedLeadsToExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterTimeBoundedLeadsToExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitTimeBoundedLeadsToExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitTimeBoundedLeadsToExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DisjunctiveExpressionContext extends ExpressionContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode LOP_DISJUNCTION() { return getToken(TdlExpressionLanguageParser.LOP_DISJUNCTION, 0); }
		public DisjunctiveExpressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterDisjunctiveExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitDisjunctiveExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitDisjunctiveExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(22);
			switch (_input.LA(1)) {
			case LOP_NEGATION:
				{
				_localctx = new NegatedExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(9);
				match(LOP_NEGATION);
				setState(10);
				expression(9);
				}
				break;
			case LEFT_PAREN:
				{
				_localctx = new GroupedExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(11);
				match(LEFT_PAREN);
				setState(12);
				expression(0);
				setState(13);
				match(RIGHT_PAREN);
				}
				break;
			case LOP_REPETITION_COUNT:
				{
				_localctx = new ConditionalRepetitionExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(15);
				match(LOP_REPETITION_COUNT);
				setState(16);
				expression(0);
				setState(17);
				match(LEFT_BRACKET);
				setState(18);
				boundOverNaturals();
				setState(19);
				match(RIGHT_BRACKET);
				}
				break;
			case LOP_UNIVERSAL_QUANTIFIER:
			case LOP_EXISTENTIAL_QUANTIFIER:
				{
				_localctx = new GroundTermExpressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(21);
				quantifiedTrapsetExpression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(48);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(46);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new ConjunctiveExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(24);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(25);
						match(LOP_CONJUNCTION);
						setState(26);
						expression(9);
						}
						break;
					case 2:
						{
						_localctx = new DisjunctiveExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(27);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(28);
						match(LOP_DISJUNCTION);
						setState(29);
						expression(8);
						}
						break;
					case 3:
						{
						_localctx = new ImplicativeExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(30);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(31);
						match(LOP_IMPLICATION);
						setState(32);
						expression(7);
						}
						break;
					case 4:
						{
						_localctx = new EquivalenceExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(33);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(34);
						match(LOP_EQUIVALENCE);
						setState(35);
						expression(6);
						}
						break;
					case 5:
						{
						_localctx = new LeadsToExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(36);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(37);
						match(LOP_LEADS_TO);
						setState(38);
						expression(5);
						}
						break;
					case 6:
						{
						_localctx = new TimeBoundedLeadsToExpressionContext(new ExpressionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(39);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(40);
						match(LOP_LEADS_TO);
						setState(41);
						match(LEFT_BRACKET);
						setState(42);
						boundOverNaturals();
						setState(43);
						match(RIGHT_BRACKET);
						setState(44);
						expression(4);
						}
						break;
					}
					} 
				}
				setState(50);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class QuantifiedTrapsetExpressionContext extends ParserRuleContext {
		public QuantifiedTrapsetExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quantifiedTrapsetExpression; }
	 
		public QuantifiedTrapsetExpressionContext() { }
		public void copyFrom(QuantifiedTrapsetExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class UniversalTrapsetExpressionContext extends QuantifiedTrapsetExpressionContext {
		public TerminalNode LOP_UNIVERSAL_QUANTIFIER() { return getToken(TdlExpressionLanguageParser.LOP_UNIVERSAL_QUANTIFIER, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(TdlExpressionLanguageParser.LEFT_PAREN, 0); }
		public TrapsetExpressionContext trapsetExpression() {
			return getRuleContext(TrapsetExpressionContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(TdlExpressionLanguageParser.RIGHT_PAREN, 0); }
		public UniversalTrapsetExpressionContext(QuantifiedTrapsetExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterUniversalTrapsetExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitUniversalTrapsetExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitUniversalTrapsetExpression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ExistentialTrapsetExpressionContext extends QuantifiedTrapsetExpressionContext {
		public TerminalNode LOP_EXISTENTIAL_QUANTIFIER() { return getToken(TdlExpressionLanguageParser.LOP_EXISTENTIAL_QUANTIFIER, 0); }
		public TerminalNode LEFT_PAREN() { return getToken(TdlExpressionLanguageParser.LEFT_PAREN, 0); }
		public TrapsetExpressionContext trapsetExpression() {
			return getRuleContext(TrapsetExpressionContext.class,0);
		}
		public TerminalNode RIGHT_PAREN() { return getToken(TdlExpressionLanguageParser.RIGHT_PAREN, 0); }
		public ExistentialTrapsetExpressionContext(QuantifiedTrapsetExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).enterExistentialTrapsetExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof TdlExpressionLanguageListener) ((TdlExpressionLanguageListener)listener).exitExistentialTrapsetExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof TdlExpressionLanguageVisitor) return ((TdlExpressionLanguageVisitor<? extends T>)visitor).visitExistentialTrapsetExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuantifiedTrapsetExpressionContext quantifiedTrapsetExpression() throws RecognitionException {
		QuantifiedTrapsetExpressionContext _localctx = new QuantifiedTrapsetExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_quantifiedTrapsetExpression);
		try {
			setState(61);
			switch (_input.LA(1)) {
			case LOP_UNIVERSAL_QUANTIFIER:
				_localctx = new UniversalTrapsetExpressionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(51);
				match(LOP_UNIVERSAL_QUANTIFIER);
				setState(52);
				match(LEFT_PAREN);
				setState(53);
				trapsetExpression();
				setState(54);
				match(RIGHT_PAREN);
				}
				break;
			case LOP_EXISTENTIAL_QUANTIFIER:
				_localctx = new ExistentialTrapsetExpressionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				match(LOP_EXISTENTIAL_QUANTIFIER);
				setState(57);
				match(LEFT_PAREN);
				setState(58);
				trapsetExpression();
				setState(59);
				match(RIGHT_PAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
